--- a/Website/setup/ccpp/templates/default.html
+++ b/Website/setup/ccpp/templates/default.html
@@ -2,8 +2,18 @@
 <html>
   <head>
     <title>Interactive maps for Django web apps</title>
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
   </head>
   <body>
    <h1>Kev Gay</h1>
+   <div id='map' style='width: 400px; height: 300px;'></div>
+    <script>
+    mapboxgl.accessToken = 'pk.eyJ1Ijoia2plb243IiwiYSI6ImNrenViNThrYjA1NGgyeG15YmFxc2U0bWIifQ.lBLxKsTVlkcizINrkPTbsw';
+    var map = new mapboxgl.Map({
+    container: 'map',
+    style: 'mapbox://styles/mapbox/streets-v11'
+    });
+    </script>
   </body>
 </html>
