--- a/Website/setup/ccpp/templates/default.html
+++ b/Website/setup/ccpp/templates/default.html
@@ -6,7 +6,7 @@
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
   </head>
   <body>
-   <div id='map' style='width: 1000px; height: 700px;'></div>
+   <div id='map' style='width: 100%; height: 700px;'></div>
     <script>
     mapboxgl.accessToken = 'pk.eyJ1Ijoia2plb243IiwiYSI6ImNrenViNThrYjA1NGgyeG15YmFxc2U0bWIifQ.lBLxKsTVlkcizINrkPTbsw';
     var map = new mapboxgl.Map({
