--- a/Website/setup/ccpp/templates/default.html
+++ b/Website/setup/ccpp/templates/default.html
@@ -4,16 +4,20 @@
     <title>Interactive maps for Django web apps</title>
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
+    <style>
+      body { margin: 0; padding: 0; }
+      #map { position: absolute; top: 0; bottom: 0; width: 100%; }
+      </style>
   </head>
   <body>
-   <div id='map' style='width: 100%; height: 700px;'></div>
+   <div id='map'></div>
     <script>
     mapboxgl.accessToken = 'pk.eyJ1Ijoia2plb243IiwiYSI6ImNrenViNThrYjA1NGgyeG15YmFxc2U0bWIifQ.lBLxKsTVlkcizINrkPTbsw';
     var map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/mapbox/streets-v11',
     center: [-114.051722, 51.048886, ],
-    zoom: 11,
+    zoom: 11.5,
     });
     </script>
   </body>
