--- a/Website/setup/ccpp/templates/home.html
+++ b/Website/setup/ccpp/templates/home.html
@@ -6,15 +6,23 @@
 {% block content %}
 {% if user.is_authenticated %}
 <head>
-    <title>Interactive maps for Django web apps</title>
+    <title>Map</title>
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
     <style>
       body { margin: 0; padding: 0; }
-      #map { position: absolute; top: 0; bottom: 0; width: 100%; }
+      #map { position: absolute; top: 8%; bottom: 0; width: 100%; height:92%}
       </style>
   </head>
   <body>
+    <header class="w3-container w3-theme w3-padding" id="myHeader"> 
+        <div class="w3-bar w3-black w3-card">
+        <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+        <a href="#" class="w3-bar-item w3-button w3-padding-large w3-light-green">HOME</a>
+        <a href="{% url 'logout' %}" class="w3-bar-item w3-button w3-padding-large w3-hide-small">LOGOUT</a>
+        <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
+        </header>
+    </div>  
    <div id='map'></div>
     <script>
     mapboxgl.accessToken = 'pk.eyJ1Ijoia2plb243IiwiYSI6ImNrenViNThrYjA1NGgyeG15YmFxc2U0bWIifQ.lBLxKsTVlkcizINrkPTbsw';
@@ -27,7 +35,21 @@
     </script>
   </body>
 {% else %}
-  <p>You are not logged in</p>
-  <a href="{% url 'login' %}">Log In</a>
+
+<body>
+    <header class="w3-container w3-theme w3-padding" id="myHeader"> 
+    <div class="w3-bar w3-black w3-card">
+    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-light-green">HOME</a>
+    <a href="{% url 'login' %}" class="w3-bar-item w3-button w3-padding-large w3-hide-small">LOGIN</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
+    </header>
+    </div>    
+
+    <div class="w3-center w3-xxxlarge w3-bold">
+    <h1>COMPANY CARPOOL</h1>
+    <h4 class="w3-animate-bottom">Welcome to our homepage</h4>
+    </div>
+</body>
 {% endif %}
 {% endblock %}
