--- a/Website/setup/ccpp/templates/home.html
+++ b/Website/setup/ccpp/templates/home.html
@@ -11,7 +11,7 @@
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
     <style>
       body { margin: 0; padding: 0; }
-      #map { position: absolute; top: 8%; bottom: 0; width: 100%; height:92%}
+      #map { position: absolute; top: 12%; bottom: 0; width: 100%; height:92%}
       </style>
   </head>
   <body>
@@ -33,6 +33,82 @@
     zoom: 11.5,
     });
     </script>
+    <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <style>
+      body {
+        font-family: "Lato", sans-serif;
+      }
+      
+      .sidepanel  {
+        width: 0;
+        position: fixed;
+        z-index: 1;
+        height: 30%;
+        top: 6.7%;
+        left: 0;
+        background-color: #111;
+        overflow-x: hidden;
+        transition: 0.5s;
+        padding-top: 60px;
+      }
+      
+      .sidepanel a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: block;
+        transition: 0.3s;
+      }
+      
+      .sidepanel a:hover {
+        color: #f1f1f1;
+      }
+      
+      .sidepanel .closebtn {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+      }
+      
+      .openbtn {
+        font-size: 20px;
+        cursor: pointer;
+        background-color: rgb(45, 71, 52);
+        color: white;
+        padding: 5px 10px;
+        border: none;
+      }
+      
+      .openbtn:hover {
+        background-color:#444;
+      }
+      </style>
+      </head>
+      <body>
+      
+      <div id="mySidepanel" class="sidepanel">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+        <a href="#">Driver</a>
+        <a href="#">Passengers</a>
+      </div>
+      
+      <button class="openbtn" onclick="openNav()">></button>  
+      
+      <script>
+      function openNav() {
+        document.getElementById("mySidepanel").style.width = "15%";
+      }
+      
+      function closeNav() {
+        document.getElementById("mySidepanel").style.width = "0";
+      }
+      </script>
+         
+      </body>
+    
   </body>
 {% else %}
 
