--- a/Website/setup/ccpp/templates/home.html
+++ b/Website/setup/ccpp/templates/home.html
@@ -18,9 +18,9 @@
     <header class="w3-container w3-theme w3-padding" id="myHeader"> 
         <div class="w3-bar w3-black w3-card">
         <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-        <a href="#" class="w3-bar-item w3-button w3-padding-large w3-light-green">HOME</a>
+        <a href="" class="w3-bar-item w3-button w3-padding-large w3-light-green">HOME</a>
         <a href="{% url 'logout' %}" class="w3-bar-item w3-button w3-padding-large w3-hide-small">LOGOUT</a>
-        <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
+        <a href="" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
         </header>
     </div>  
    <div id='map'></div>
@@ -40,9 +40,9 @@
     <header class="w3-container w3-theme w3-padding" id="myHeader"> 
     <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-light-green">HOME</a>
+    <a href="" class="w3-bar-item w3-button w3-padding-large w3-light-green">HOME</a>
     <a href="{% url 'login' %}" class="w3-bar-item w3-button w3-padding-large w3-hide-small">LOGIN</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
+    <a href="" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
     </header>
     </div>    
 
@@ -51,5 +51,6 @@
     <h4 class="w3-animate-bottom">Welcome to our homepage</h4>
     </div>
 </body>
+
 {% endif %}
 {% endblock %}
