--- a/Website/setup/ccpp/templates/registration/login.html
+++ b/Website/setup/ccpp/templates/registration/login.html
@@ -4,21 +4,25 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
+  <!-- NAV BAR -->
 <body>
   <header class="w3-container w3-theme w3-padding" id="myHeader"> 
     <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="{% url 'home' %}" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-light-green">LOGIN</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
+    <a href="" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-light-green">LOGIN</a>
+    <a href="" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
     </header>
     </div>    
 
+<!-- LOGIN -->
+<br> <br>
+<div class="w3-container w3-content w3-round-large w3-light-green" style="max-width:400px" id="contact">
+  <h4 class="w3-wide w3-auto">LOGIN</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Log In</button>
-  </form>
-</body>
-
+  <button class="w3-button w3-block w3-black w3-round-medium" type="submit" >Log In</button>
+  <br>
+  </div>
 {% endblock %}
