--- a/Website/setup/ccpp/templates/home.html
+++ b/Website/setup/ccpp/templates/home.html
@@ -119,7 +119,7 @@
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="" class="w3-bar-item w3-button w3-padding-large w3-light-green">HOME</a>
     <a href="{% url 'login' %}" class="w3-bar-item w3-button w3-padding-large w3-hide-small">LOGIN</a>
-    <a href="" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
+    <button onclick="document.getElementById('id01').style.display='block'" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</button>
     </header>
     </div>    
 
@@ -127,6 +127,33 @@
     <h1>COMPANY CARPOOL</h1>
     <h4 class="w3-animate-bottom">Welcome to our homepage</h4>
     </div>
+
+    <div id="id01" class="w3-modal">
+      <div class="w3-modal-content w3-card-4">
+        <header class="w3-container w3-light-green"> 
+          <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-circle w3-display-topright w3-hover-red">&times;</span>
+          <h2>Light Mode Bad</h2>
+        </header>
+        <div class="w3-container w3-black">
+          <p style="font-size:160%"><b>Contact Info:</b></p>
+          <p><b>Kevin Van: </b>vankevin58@gmail.com</p>
+          <p><b>Gustavo Bravo: </b>vankevin58@gmail.com</p>
+          <p><b>Matthew Mcconnell: </b>vankevin58@gmail.com</p>
+          <p><b>Kenny Jeon: </b>vankevin58@gmail.com</p>
+          <p><b>Vanessa Chen: </b>vankevin58@gmail.com</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script>
+  var modal = document.getElementById('id01');
+  window.onclick = function(event) {
+    if (event.target == modal) {
+      modal.style.display = "none";
+    }
+  }
+    </script>
+
 </body>
 
 {% endif %}
