--- a/Website/setup/ccpp/templates/base.html
+++ b/Website/setup/ccpp/templates/base.html
@@ -5,19 +5,27 @@
   <meta charset="utf-8">
   <title>{% block title %}Company Carpool{% endblock %}</title>
 </head>
+<!-- w3 css library import-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- style choices-->
 <style>
 body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
 body {background-color: #3c3e42;}
 </style>
 <body>
-  <main>
     {% block content %}
+    <script>
+      var modal = document.getElementById('id01');
+      window.onclick = function(event) {
+        if (event.target == modal) {
+          modal.style.display = "none";
+        }
+      }
+        </script>
     {% endblock %}
-  </main>
 </body>
 </html>
