--- a/Website/setup/ccpp/templates/home.html
+++ b/Website/setup/ccpp/templates/home.html
@@ -5,6 +5,7 @@
 
 {% block content %}
 {% if user.is_authenticated %}
+
 <head>
   <!-- Map import-->
     <title>Map</title>
@@ -62,7 +63,9 @@
     center: [-114.051722, 51.048886, ],
     zoom: 11.5,
     });
+    
     for(let i = 0; i < 5; i ++){
+      
       new mapboxgl.Marker().setLngLat([-114.051+(i/100), 51.048]).addTo(map);
     }
     </script>
@@ -132,8 +135,8 @@
      
         The names are:
         
-        <p>{{some_string}}</p>
-      
+        <li>{{std.test}}</li>
+        
       </div>
       
       <button class="openbtn" onclick="openNav()">View Groups</button>  
