worky varaible into html

--- a/Website/setup/ccpp/templates/home.html
+++ b/Website/setup/ccpp/templates/home.html
@@ -204,6 +204,9 @@
         that are commuting to the same workplace destination. We determined this was a safe method of
         transport as employees are typically screened before employment and serves as a fun way to
         meet others on the way to work.
+        My First Name is {{ first_name }}.
+        <br/>
+        My Last Name is  {{ last_name }}.
       </p>
     </div>
   </div>
@@ -222,3 +225,4 @@
 
 {% endif %}
 {% endblock %}
+
