Tested to see if file can be changed from py to django

--- a/Website/setup/ccpp/templates/home.html
+++ b/Website/setup/ccpp/templates/home.html
@@ -132,7 +132,10 @@
      
         The names are:
         
-        <p>{{some_string}}</p>
+        {% for list_item in my_list %}
+          {{list_item}}<br>
+        {%endfor%}
+
       
       </div>
       
