Debug View Groups

--- a/Website/setup/ccpp/templates/home.html
+++ b/Website/setup/ccpp/templates/home.html
@@ -148,7 +148,7 @@
       
       </div>
       
-      <button onclick = "" class="openbtn" onclick="openNav()">View Groups</button>  
+      <button class="openbtn" onclick="openNav()">View Groups</button>  
       
       <script>
       function openNav() {
