--- a/Website/setup/ccpp/templates/home.html
+++ b/Website/setup/ccpp/templates/home.html
@@ -139,12 +139,15 @@
       
       <div id="ref" class="refbutton">
         <i class="fa fa-refresh w3-spin w3-xlarge w3-center"></i>
-
       </div>
 
       <div id="mySidepanel" class="sidepanel">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <a href="#">Groups</a>
+     
+        The names are:
+        
+        <p>{{some_string}}</p>
       
       </div>
       
