--- a/Website/setup/ccpp/templates/home.html
+++ b/Website/setup/ccpp/templates/home.html
@@ -82,7 +82,7 @@
 
 
     //making company marker
-    const popup = new mapboxgl.Popup({offest:25}).setText('test');
+    const popup = new mapboxgl.Popup({offset:25}).setText('test');
     new mapboxgl.Marker({"color":'#00FFA8', 'scale':1.5})
     .setLngLat([-114.14069500180989,51.07771210980663])
     .setPopup(popup)
@@ -94,7 +94,7 @@
       //ele = driver num
       //
       current_color = colors[i];
-     const popup = new mapboxgl.Popup({offest:25}).setText('test');
+     const popup = new mapboxgl.Popup({offset:25}).setText('test');
      new mapboxgl.Marker({"color":current_color, "scale": 1.2})
      .setLngLat([names[ele][1], names[ele][0]])
     .setPopup(popup)
@@ -108,7 +108,7 @@
         
         
         current_passenger_id = my_list[ele][ele2];
-        const popup = new mapboxgl.Popup({offest:25}).setText('test');
+        const popup = new mapboxgl.Popup({offset:25}).setText('test');
         new mapboxgl.Marker({"color":current_color})
         .setLngLat([names[current_passenger_id][1], names[current_passenger_id][0]])
         .setPopup(popup)
