--- a/Website/setup/ccpp/templates/home.html
+++ b/Website/setup/ccpp/templates/home.html
@@ -78,11 +78,13 @@
     }
     const colors = ['#FF33E0', '#FFAE33', '#338EFF', '#FFFFFF'];
     var my_list = {{test_group|safe}};
+    var tag_data = {{tag_value|safe}};
+   // window.alert(tag_data[0]);
 
 
 
     //making company marker
-    const popup = new mapboxgl.Popup({offset:25}).setText('test');
+    const popup = new mapboxgl.Popup({offest:25}).setText('Company Destination!');
     new mapboxgl.Marker({"color":'#00FFA8', 'scale':1.5})
     .setLngLat([-114.14069500180989,51.07771210980663])
     .setPopup(popup)
@@ -90,11 +92,15 @@
     i = 0;
     for(const ele in my_list){
       //window.alert(ele);
+      
 
       //ele = driver num
       //
+     
+      tag = tag_data[ele];
+      
       current_color = colors[i];
-     const popup = new mapboxgl.Popup({offset:25}).setText('test');
+     const popup = new mapboxgl.Popup({offest:25}).setText(tag);
      new mapboxgl.Marker({"color":current_color, "scale": 1.2})
      .setLngLat([names[ele][1], names[ele][0]])
     .setPopup(popup)
@@ -108,7 +114,7 @@
         
         
         current_passenger_id = my_list[ele][ele2];
-        const popup = new mapboxgl.Popup({offset:25}).setText('test');
+        const popup = new mapboxgl.Popup({offest:25}).setText(tag_data[current_passenger_id]);
         new mapboxgl.Marker({"color":current_color})
         .setLngLat([names[current_passenger_id][1], names[current_passenger_id][0]])
         .setPopup(popup)
