Made image background + janky refresh button

--- a/Website/setup/ccpp/templates/base.html
+++ b/Website/setup/ccpp/templates/base.html
@@ -15,6 +15,8 @@
 body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
 body {background-color: #3c3e42;}
+body{background-image: url('https://backlightblog.com/images/2021/12/forest-photography-header.jpg');}
+</style>
 </style>
 <body>
     {% block content %}
