--- a/Website/setup/ccpp/templates/home.html
+++ b/Website/setup/ccpp/templates/home.html
@@ -282,10 +282,10 @@
     <div class="w3-container w3-black">
       <p style="font-size:160%"><b>Contact Info:</b></p>
       <p><b>Kevin Van: </b>vankevin58@gmail.com</p>
-      <p><b>Gustavo Bravo: </b>vankevin58@gmail.com</p>
-      <p><b>Matthew Mcconnell: </b>vankevin58@gmail.com</p>
-      <p><b>Kenny Jeon: </b>vankevin58@gmail.com</p>
-      <p><b>Vanessa Chen: </b>vankevin58@gmail.com</p>
+      <p><b>Gustavo Bravo: </b>Gustavoa1011@gmail.com</p>
+      <p><b>Matthew Mcconnell: </b>mattmcconnell11@gmail.com</p>
+      <p><b>Kenny Jeon: </b>kenny.jeon25@gmail.com</p>
+      <p><b>Vanessa Chen: </b>vanessachen2000@gmail.com</p>
     </div>
   </div>
 </div>
