--- a/Website/setup/ccpp/templates/home.html
+++ b/Website/setup/ccpp/templates/home.html
@@ -43,10 +43,10 @@
       <div class="w3-container w3-black">
         <p style="font-size:160%"><b>Contact Info:</b></p>
         <p><b>Kevin Van: </b>vankevin58@gmail.com</p>
-        <p><b>Gustavo Bravo: </b>vankevin58@gmail.com</p>
-        <p><b>Matthew Mcconnell: </b>vankevin58@gmail.com</p>
-        <p><b>Kenny Jeon: </b>vankevin58@gmail.com</p>
-        <p><b>Vanessa Chen: </b>vankevin58@gmail.com</p>
+        <p><b>Gustavo Bravo: </b>Gustavoa1011@gmail.com</p>
+        <p><b>Matthew Mcconnell: </b>mattmcconnell11@gmail.com</p>
+        <p><b>Kenny Jeon: </b>kenny.jeon25@gmail.com</p>
+        <p><b>Vanessa Chen: </b>vanessachen2000@gmail.com</p>
       </div>
     </div>
   </div>
@@ -207,7 +207,6 @@
 
       </div>
       <div id="mySidepanel" class="sidepanel">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         
         <script>
           var group_info = {{group_info|safe}};
@@ -238,7 +237,7 @@
           }
           document.getElementById('mySidepanel').innerHTML = "<span style='color: white;'>"+ members;
         </script>
-      
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
       </div>
       
       <button class="openbtn w3-button w3-black" onclick="openNav()">View Groups</button>  
